modul 1: gcm network manager

--- a/Modul 1/9. GCM Network Manager/MyGCMNetworkManager/app/src/main/AndroidManifest.xml
+++ b/Modul 1/9. GCM Network Manager/MyGCMNetworkManager/app/src/main/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="trianne.dicoding.myjobscheduler">
+    package="trianne.dicoding.mygcmnetworkmanager">
+
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 
     <application
         android:allowBackup="true"
@@ -18,10 +20,13 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".GetCurrentWeatherJobService"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="android.permission.BIND_JOB_SERVICE"/>
+        <service android:name=".SchedulerService"
+            android:permission="com.google.android.gms.permission.BIND_NETWORK_TASK_SERVICE"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.android.gms.gcm.ACTION_TASK_READY"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
