--- a/Modul 2/4. Action Bar/MyActionBar/app/src/main/AndroidManifest.xml
+++ b/Modul 2/4. Action Bar/MyActionBar/app/src/main/AndroidManifest.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="trianne.dicoding.moviecataloguev2">
-
-    <uses-permission android:name="android.permission.INTERNET" />
+    package="trianne.dicoding.myactionbar">
 
     <application
         android:allowBackup="true"
@@ -18,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".MenuActivity"></activity>
     </application>
 
 </manifest>
