--- a/Modul 3/8. Final Project #2/MovieCatalogueV3/app/src/main/AndroidManifest.xml
+++ b/Modul 3/8. Final Project #2/MovieCatalogueV3/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="trianne.dicoding.moviecataloguev3">
+    package="trianne.dicoding.moviecataloguev31">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <permission
+        android:name="trianne.dicoding.moviecataloguev31.READ_DATABASE"
+        android:protectionLevel="normal" />
+    <permission
+        android:name="trianne.dicoding.moviecataloguev31.WRITE_DATABASE"
+        android:protectionLevel="normal" />
 
     <application
         android:allowBackup="true"
@@ -9,13 +18,30 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <provider
+            android:name=".provider.FavoriteProvider"
+            android:authorities="trianne.dicoding.moviecataloguev31"
+            android:exported="true"
+            android:readPermission="trianne.dicoding.moviecataloguev31.READ_DATABASE"
+            android:writePermission="trianne.dicoding.moviecataloguev31.WRITE_DATABASE" />
+
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".DetailActivity"/>
+
+        <activity android:name=".FavoriteActivity" />
+        <activity android:name=".NowplayingActivity" />
+        <activity android:name=".UpcomingActivity"/>
     </application>
 
 </manifest>
