--- a/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/AndroidManifest.xml
+++ b/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/AndroidManifest.xml
@@ -3,12 +3,14 @@
     package="trianne.dicoding.moviecataloguev4">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
-    <permission
-        android:name="trianne.dicoding.moviecataloguev4.READ_DATABASE"
+    <permission android:name="trianne.dicoding.moviecataloguev4.READ_DATABASE"
         android:protectionLevel="normal" />
-    <permission
-        android:name="trianne.dicoding.moviecataloguev4.WRITE_DATABASE"
+    <permission android:name="trianne.dicoding.moviecataloguev4.WRITE_DATABASE"
         android:protectionLevel="normal" />
 
     <application
@@ -17,16 +19,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme">
-        <provider
-            android:name=".provider.FavoriteProvider"
+
+        <provider android:name=".provider.FavoriteProvider"
             android:authorities="trianne.dicoding.moviecataloguev4"
             android:exported="true"
             android:readPermission="trianne.dicoding.moviecataloguev4.READ_DATABASE"
             android:writePermission="trianne.dicoding.moviecataloguev4.WRITE_DATABASE" />
 
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".MainActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,7 +40,28 @@
         <activity android:name=".FavoriteActivity" />
         <activity android:name=".NowplayingActivity" />
         <activity android:name=".UpcomingActivity" />
-        <activity android:name=".SettingsActivity"></activity>
+        <activity android:name=".SettingsActivity" />
+
+        <receiver android:name=".widget.FavoriteWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/favorite_widget_info" />
+        </receiver>
+        <receiver android:name=".reminder.ReminderReceiver"
+            android:enabled="true"
+            android:exported="true" />
+        <receiver android:name=".reminder.ReminderReleaseReceiver"
+            android:enabled="true"
+            android:exported="true" />
+
+        <service android:name=".widget.StackWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
