modul 4: final project semoga diterima

--- a/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/AndroidManifest.xml
+++ b/Modul 4/4. Final Project/MovieCatalogueV4/app/src/main/AndroidManifest.xml
@@ -51,7 +51,7 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/favorite_widget_info" />
         </receiver>
-        <receiver android:name=".reminder.ReminderReceiver"
+        <receiver android:name=".reminder.ReminderDailyReceiver"
             android:enabled="true"
             android:exported="true" />
         <receiver android:name=".reminder.ReminderReleaseReceiver"
